--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "tic-tac-toe",
+  "homepage": "https://francocastano.github.io/hook-form/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -11,6 +14,7 @@
   },
   "dependencies": {
     "canvas-confetti": "1.9.3",
+    "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
