Fix the bug from an error with github pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tic-tac-toe",
-  "homepage": "https://francocastano.github.io/hook-form/",
+  "homepage": "https://francocastano.github.io/tic-tac-toe/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
